3 files modified, 2 added, 2 deleted

--- a/view/index.html
+++ b/view/index.html
@@ -1,1 +1,24 @@
-<h1>Hello World !</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/index.css" />
+    <title>UserForm</title>
+  </head>
+  <body>
+    <h2 style="text-align: center">Hello World</h2>
+    <form action="/usersDetails" method="POST">
+      <section>
+        <input type="text" name="name" placeholder="Name" />
+      </section>
+      <section>
+        <input type="email" name="email" placeholder="Email" />
+      </section>
+      <section>
+        <button type="submit">Submit</button>
+      </section>
+    </form>
+  </body>
+</html>
